修改图片功能添加，点击图片可放大

--- a/current_system/view/homepage.html
+++ b/current_system/view/homepage.html
@@ -16,7 +16,7 @@
     <!--common style-->
     <link href="/css/basics/style.css" rel="stylesheet" />
     <link href="/css/basics/style-responsive.css" rel="stylesheet" />
-	
+	<link rel="stylesheet" type="text/css" href="/css/image_upload/zoom.css"/>
 	<!-- adminLte-->
 	<!-- Theme style -->
 	<link rel="stylesheet" href="/css/basics/AdminLTE.min.css" />
@@ -201,5 +201,7 @@
 <script src="/js/current_system/homepage.js"></script>
 <!-- view_show js -->
 <script src="/js/view_show/viewshow.js"></script>
+<script src="/js/image_upload/zoom.js"></script>
+<script src="/js/basics/jquery.min.js"></script>
 </body>
 </html>
