--- a/hsh_backstage/view/common/left.html
+++ b/hsh_backstage/view/common/left.html
@@ -39,8 +39,12 @@ $(function(){
 		    </div>
 		    
 		    <ul class="menuson">
-			     <li id="search_li"><cite></cite><a id="search_a" href="/hsh_backstage/addMenu/" target="rightFrame" style="color: #fff;">Add</a><i></i></li>
-			    <li><cite></cite><a href="/hsh_backstage/getCurrentSystem/" target="rightFrame" style="color: #fff;">Select</a><i></i></li>
+			     <li id="search_li"><cite></cite><a id="search_a" href="/hsh_backstage/addMenu/" target="rightFrame" style="color: #fff;">CurrentSystem Add</a><i></i></li>
+			     <li><cite></cite><a href="/hsh_backstage/getCurrentSystem/" target="rightFrame" style="color: #fff;">CurrentSystem Select</a><i></i></li>
+			     <li><cite></cite><a href="/hsh_backstage/getAlert/" target="rightFrame" style="color: #fff;">Alert</a><i></i></li>
+			     <li id="search_li"><cite></cite><a id="search_a" href="/hsh_backstage/getSpare/" target="rightFrame" style="color: #fff;">Spare</a><i></i></li>
+			     <li id="search_li"><cite></cite><a id="search_a" href="/hsh_backstage/getTip/" target="rightFrame" style="color: #fff;">Tip</a><i></i></li>
+			     <li id="search_li"><cite></cite><a id="search_a" href="/hsh_backstage/getDoc/" target="rightFrame" style="color: #fff;">Doc</a><i></i></li>
 			</ul>
 	    </dd>
 	    
